--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ What Can I Do 💻
     Web Development
 </p>        
           <p>
-            Design and development of applications and software projects based on the web environment , using Back-end technologies include php, SQL using Laravel, in addition to experience working on Node.js and MangoDB.
+            Design and development of applications and software projects based on the web environment , using <p class="fw-bold TurquoiseTextColor">Back-end</p> technologies include php, SQL using Laravel, in addition to experience working on Node.js and MangoDB.
 
 & Front-end web  such as html, css, JavaScript using React and Next.JS
 
