--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="dotsbg h-100 w-100"></div>
     <div class="container">
        <div class="row">
-        <div class="col-5">
+        <div class="col-sm-5">
           <img class="avatarimg w-100 h-auto mt-5" src="/img/avatarimg.png" alt="avatarimg">
         </div>
-        <div class="col-7" dir="rtl">
+        <div class="col-sm-7" dir="rtl">
          
           
           <div class="pt-5 mt-5">
@@ -418,20 +418,22 @@
 
           <div class="mt-5  ">
              <!-- inforow-->
-           <div class="inforow mb-4">
+           <div class="inforow mb-4 w-100">
             <div class="icon bgcard text-center p-2  d-inline rounded-circle">
               <i class="bi bi-geo-alt-fill m-0 p-0"></i> 
             </div>
-            <div class="icontext d-lg-inline mx-3 bgcard p-2 rounded-pill px-3">
+            <div class="icontext d-lg-inline mx-3 bgcard p-2 rounded-pill px-3 d-inline">
               العراق , كربلاء
             </div>
            </div>
+
+
            <!-- inforow-->
            <div class="inforow mb-4">
             <div class="icon bgcard text-center p-2  d-inline rounded-circle">
               <i class="bi bi-telephone-fill"></i>
             </div>
-            <div class="icontext d-lg-inline mx-3 bgcard p-2 rounded-pill px-3" dir="ltr">
+            <div class="icontext d-lg-inline mx-3 bgcard p-2 rounded-pill px-3  d-inline" dir="ltr">
               <i class="bi bi-telegram fs-5 "></i> 
               <i class="bi bi-whatsapp fs-5 px-2"></i>
               +964 771 705 1885
@@ -442,10 +444,10 @@
             <div class="icon bgcard text-center p-2  d-inline rounded-circle">
               <i class="bi bi-envelope-at-fill"></i>
             </div>
-            <div class="icontext d-lg-inline me-3 bgcard p-2 rounded-pill px-3" dir="ltr">
+            <div class="icontext d-lg-inline me-3 bgcard p-2 rounded-pill px-3  d-inline " dir="ltr">
               alialmeamar@gmail.com
             </div>
-            <div class="icontext d-lg-inline me-2  bgcard p-2 rounded-pill px-3" dir="ltr">
+            <div class="icontext d-lg-inline me-2  bgcard p-2 rounded-pill px-3  d-inline-block  my-3 " dir="ltr">
               alialmeamar@hotmail.com
             </div>
            </div>
@@ -454,7 +456,7 @@
             <div class="icon bgcard text-center p-2  d-inline rounded-circle">
               <i class="bi bi-linkedin"></i>
             </div>
-            <div class="icontext d-lg-inline me-3 bgcard p-2 rounded-pill px-3" dir="ltr">
+            <div class="icontext d-lg-inline me-3 bgcard p-2 rounded-pill px-3   d-inline" dir="ltr">
               linkedin.com/in/alialmeamar
             </div>
            </div>
@@ -462,8 +464,9 @@
             <div class="icon bgcard text-center p-2  d-inline rounded-circle">
               <i class="bi bi-mortarboard-fill"></i>
             </div>
-            <div class="icontext d-lg-inline me-3 bgcard p-2 rounded-pill px-3" dir="ltr">
-              Master of information Technology - University  Tenaga Nasional ( UINTEN ) ,
+            <div class="icontext d-lg-inline me-3 bgcard p-2 rounded-5 px-3  d-inline" dir="ltr">
+              <p class="d-inline-block">Master of information Technology </p>
+             <p class="d-inline-block"> - University  Tenaga Nasional ( UINTEN ) ,</p>
             </div>
            </div>
            <!-- inforow-->
