--- a/index.html
+++ b/index.html
@@ -857,6 +857,10 @@ What Can I Do 💻
           <p class="text-center">VS Code</p>
         </div>
         <div class="col-1 text-center mb-3">
+          <img src="/img/ds_icon/Layer_1dsoftware-2.png" class="mb-3 plicon  " alt="PLICON">
+          <p class="text-center"> Android Studio  </p>
+        </div>
+        <div class="col-1 text-center mb-3">
           <img src="/img/ds_icon/Layer_1dsoftware-6.png" class="mb-3 plicon  " alt="PLICON">
           <p class="text-center">Figma</p>
         </div>
@@ -891,12 +895,12 @@ What Can I Do 💻
           <p class="text-center">3D Max </p>
         </div>
         <div class="col-1 text-center mb-3">
-          <img src="/img/ds_icon/Groupdsoftware-4.png" class="mb-3 plicon  " alt="PLICON">
+          <img src="/img/ds_icon/Groupdsoftware-5.png" class="mb-3 plicon  " alt="PLICON">
           <p class="text-center">Cinema 4D </p>
         </div>
         <div class="col-1 text-center mb-3">
           <img src="/img/ds_icon/Layer_1dsoftware-5.png" class="mb-3 plicon  " alt="PLICON">
-          <p class="text-center">indesign</p>
+          <p class="text-center">Cinema 4</p>
         </div>
          
         
