--- a/index.html
+++ b/index.html
@@ -894,10 +894,10 @@ What Can I Do 💻
           <img src="/img/ds_icon/Layer_1dsoftware-4.png" class="mb-3 plicon  " alt="PLICON">
           <p class="text-center">3D Max </p>
         </div>
-        <div class="col-1 text-center mb-3">
+        <!-- <div class="col-1 text-center mb-3">
           <img src="/img/ds_icon/Groupdsoftware-5.png" class="mb-3 plicon  " alt="PLICON">
           <p class="text-center">Cinema 4D </p>
-        </div>
+        </div> -->
         <div class="col-1 text-center mb-3">
           <img src="/img/ds_icon/Layer_1dsoftware-5.png" class="mb-3 plicon  " alt="PLICON">
           <p class="text-center">Cinema 4</p>
