--- a/index.html
+++ b/index.html
@@ -465,7 +465,8 @@
               <i class="bi bi-mortarboard-fill"></i>
             </div>
             <div class="icontext d-lg-inline me-3 bgcard p-2 rounded-5 px-3  d-inline" dir="ltr">
-              <p class="d-inline-block">Master of information Technology </p>
+              <p class="d-inline-block">Master degree 
+                in  information Technology </p>
              <p class="d-inline-block"> - University  Tenaga Nasional ( UINTEN ) ,</p>
             </div>
            </div>
