--- a/index.html
+++ b/index.html
@@ -636,6 +636,8 @@
           <p class="fw-bold">
             HTML and CSS 
             <br>
+            Bootstrap & Tailwind 
+            <br>
             JavaScript 
             <br>
             React 
@@ -696,8 +698,8 @@
     
     </div>
 
-    <div class="container scrani codeFont mt-4 mx-auto">
-      <div class="  d-flex flex-wrap flex-fill justify-content-evenly">
+    <div class="container scrani codeFont mt-4 mx-auto  ">
+      <div class="  d-flex flex-wrap flex-fill justify-content-evenly mx-5 px-5">
         <div class=" d-inline text-center mb-3">
           <img src="/img/pl_icon/Layer_1pl_icon-8.png" class="mb-3 plicon  " alt="PLICON">
           <p class="text-center">php</p>
@@ -741,6 +743,10 @@
         <div class="d-inline text-center mb-3">
           <img src="/img/pl_icon/Layer_1pl_icon-2.png" class="mb-3 plicon  " alt="PLICON">
           <p class="text-center">Bootstrap</p>
+        </div>
+        <div class="d-inline text-center mb-3">
+          <img src="/img/pl_icon/twcss.png" class="mb-3 plicon  " alt="PLICON">
+          <p class="text-center">tailwindcss</p>
         </div>
         <div class="d-inline text-center mb-3">
           <img src="/img/pl_icon/Layer_1pl_icon-3.png" class="mb-3 plicon  " alt="PLICON">
